test/typeerrors/Examples/RestrictedAndOverloaded.hs
--x :: Eq a => a -> a -> Bool
(x, _) = ((==), ())
